# clockify-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: clockify.rs  endpoint.rs  error.rs  lib.rs  main.rs  project.rs  tag.rs
src/api/: common.rs  mod.rs  project.rs  tag.rs  task.rs  time_entry.rs  user.rs  workspace.rs
src/ui/: app.rs  components.rs  crossterm.rs  mod.rs  screen.rs  screens.rs
