[package]
name = "clockify"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Basic TUI for Clockify time tracking application"
homepage = "https://github.com/natefduncan/clockify-rs"
repository = "https://github.com/natefduncan/clockify-rs"
readme = "README.md"

[dependencies]
aho-corasick = "0.7.18"
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
confy = "0.4.0"
crossterm = "0.23.0"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tui = { version = "0.17.0", features = ["crossterm"] }

[features]
